# claude-session-analyzer

./: .gitignore  .npmignore  CLAUDE.md  README.md  justfile  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
analyzer/: __init__.py  cli.py  core.py  intent_analyzer.py  reranker.py  smart_search.py
sample_data/: bug_fix_session.json  failed_session.json  sample_session.json
scripts/: postinstall.js  quality-check.sh
skills/session-search/: SKILL.md  session-search.py
tests/: __init__.py  test_cli.py  test_core.py  test_intent_analyzer.py  test_reranker.py  test_smart_search.py
