[project]
name = "claude-session-analyzer"
version = "1.1.0"
description = "NLP-based analyzer for Claude Code session transcripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42.1",
    "rich>=13.7.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
csa = "analyzer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ============== Ruff (Lint + Format) ==============
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["analyzer", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["analyzer"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============== Mypy (类型检查) ==============
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "jieba.*",
    "rich.*",
]
ignore_missing_imports = true

# ============== Coverage (测试覆盖率) ==============
[tool.coverage.run]
source = ["analyzer"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
fail_under = 80

# ============== Bandit (安全扫描) ==============
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # skip assert_used (pytest uses assert)

# ============== Vulture (死代码检测) ==============
[tool.vulture]
min_confidence = 80
paths = ["analyzer"]
exclude = ["tests/"]

# ============== Mutmut (变异测试) ==============
[tool.mutmut]
paths_to_mutate = ["analyzer"]
tests_dir = ["tests/"]
test_command = "uv run pytest tests/ -x -q"
dict_synonyms = ["AnalysisResult", "IntentAnalysisResult", "SearchResult", "SmartSearchResult", "RerankingWeights"]

# ============== Schemathesis (API 测试) ==============
# MCP Server 使用 stdio 通信，不支持 HTTP API 测试
# 如需测试 HTTP API，请在 tests/test_api.py 中配置

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mutmut>=3.4.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "schemathesis>=4.10.2",
    "vulture>=2.14",
]
